--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     /* Floating emoji background */
     .emoji {
       position: absolute;
-      font-size: 30px;
+      font-size: 40px; /* bigger for better visibility */
       animation: floatUp 10s linear infinite;
-      opacity: 0.7;
+      opacity: 0.8;
     }
     @keyframes floatUp {
       from { transform: translateY(100vh) rotate(0deg); }
@@ -50,7 +50,7 @@
     }
 
     .message {
-      font-size: 24px;
+      font-size: 28px;
       margin-top: 30px;
       color: #ff1a75;
       animation: pop 0.5s ease forwards;
@@ -96,19 +96,23 @@
   <div id="result"></div>
 
   <!-- Hidden audio -->
-  <audio id="bgMusic" src="song.mp3"></audio>
+  <audio id="bgMusic" src="song.mp3" preload="auto" crossorigin="anonymous"></audio>
 
   <script>
-    function checkName() {
+    async function checkName() {
       const gfName = "zeba";
       const inputName = document.getElementById("nameInput").value.trim().toLowerCase();
       const resultDiv = document.getElementById("result");
       const music = document.getElementById("bgMusic");
 
       if (inputName === gfName.toLowerCase()) {
-        music.play();
+        try {
+          await music.play();
+        } catch (err) {
+          console.log("Music autoplay blocked, will start on next user action:", err);
+        }
         resultDiv.innerHTML = `
-          <div class="message">I love you Zeba, Arbaj loves you 💖😘💐🌹💕💘</div>
+          <div class="message">I love you Zeba ❤️💖😘💐🌹💕💘</div>
           <img src="images/zeba.jpg" alt="Zeba" />
         `;
       } else {
