--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     /* Floating emoji background */
     .emoji {
       position: absolute;
-      font-size: 40px; /* bigger for better visibility */
+      font-size: 30px;
       animation: floatUp 10s linear infinite;
-      opacity: 0.8;
+      opacity: 0.7;
     }
     @keyframes floatUp {
       from { transform: translateY(100vh) rotate(0deg); }
@@ -50,7 +50,7 @@
     }
 
     .message {
-      font-size: 28px;
+      font-size: 24px;
       margin-top: 30px;
       color: #ff1a75;
       animation: pop 0.5s ease forwards;
@@ -76,19 +76,6 @@
 </head>
 <body>
 
-  <!-- Floating emoji background -->
-  <script>
-    const emojis = ["🌸", "💖", "🌹", "💐", "💕", "💘", "🌺", "🌷"];
-    for (let i = 0; i < 30; i++) {
-      const span = document.createElement("span");
-      span.classList.add("emoji");
-      span.innerText = emojis[Math.floor(Math.random() * emojis.length)];
-      span.style.left = Math.random() * 100 + "vw";
-      span.style.animationDuration = 5 + Math.random() * 10 + "s";
-      document.body.appendChild(span);
-    }
-  </script>
-
   <h1>Enter Your Name ❤️</h1>
   <input type="text" id="nameInput" placeholder="Your name" />
   <button onclick="checkName()">Submit</button>
@@ -96,23 +83,33 @@
   <div id="result"></div>
 
   <!-- Hidden audio -->
-  <audio id="bgMusic" src="song.mp3" preload="auto" crossorigin="anonymous"></audio>
+  <audio id="bgMusic" src="song.mp3"></audio>
 
   <script>
-    async function checkName() {
+    function createEmojis() {
+      const emojis = ["🌸", "💖", "🌹", "💐", "💕", "💘", "🌺", "🌷"];
+      for (let i = 0; i < 30; i++) {
+        const span = document.createElement("span");
+        span.classList.add("emoji");
+        span.innerText = emojis[Math.floor(Math.random() * emojis.length)];
+        span.style.left = Math.random() * 100 + "vw";
+        span.style.animationDuration = 5 + Math.random() * 10 + "s";
+        document.body.appendChild(span);
+      }
+    }
+
+    function checkName() {
       const gfName = "zeba";
       const inputName = document.getElementById("nameInput").value.trim().toLowerCase();
       const resultDiv = document.getElementById("result");
       const music = document.getElementById("bgMusic");
 
       if (inputName === gfName.toLowerCase()) {
-        try {
-          await music.play();
-        } catch (err) {
-          console.log("Music autoplay blocked, will start on next user action:", err);
-        }
+        // Start emojis only now
+        createEmojis();
+        music.play();
         resultDiv.innerHTML = `
-          <div class="message">I love you Zeba ❤️💖😘💐🌹💕💘</div>
+          <div class="message">I love you Zeba, Arbaj loves you 💖😘💐🌹💕💘</div>
           <img src="images/zeba.jpg" alt="Zeba" />
         `;
       } else {
