--- a/index.html
+++ b/index.html
@@ -105,9 +105,8 @@
       const music = document.getElementById("bgMusic");
 
       if (inputName === gfName.toLowerCase()) {
-        // Start emojis only now
-        createEmojis();
         music.play();
+        createEmojis(); // Only create floating emojis when name matches
         resultDiv.innerHTML = `
           <div class="message">I love you Zeba, Arbaj loves you 💖😘💐🌹💕💘</div>
           <img src="images/zeba.jpg" alt="Zeba" />
