--- a/index.html
+++ b/index.html
@@ -2,87 +2,77 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Special Message</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Love Message</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      text-align: center;
-      margin: 0;
       background-color: #ffe6f0;
-      overflow: hidden;
-    }
-
-    /* Floating emoji background */
-    .emoji {
-      position: absolute;
-      font-size: 30px;
-      animation: floatUp 10s linear infinite;
-      opacity: 0.7;
-    }
-    @keyframes floatUp {
-      from { transform: translateY(100vh) rotate(0deg); }
-      to { transform: translateY(-10vh) rotate(360deg); }
+      text-align: center;
+      overflow-x: hidden;
     }
 
     h1 {
-      margin-top: 80px;
-      color: #ff1a75;
+      color: #ff3366;
+      margin-top: 20px;
     }
 
     input {
       padding: 10px;
       font-size: 16px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
     }
 
     button {
       padding: 10px 20px;
       font-size: 16px;
-      margin-left: 10px;
-      background-color: #ff4d88;
-      color: white;
-      border: none;
-      cursor: pointer;
       border-radius: 5px;
+      border: none;
+      background-color: #ff3366;
+      color: white;
+      cursor: pointer;
     }
+
     button:hover {
-      background-color: #e6005c;
+      background-color: #ff6699;
     }
 
     .message {
       font-size: 24px;
-      margin-top: 30px;
-      color: #ff1a75;
-      animation: pop 0.5s ease forwards;
-      opacity: 0;
-    }
-    @keyframes pop {
-      0% { transform: scale(0.5); opacity: 0; }
-      100% { transform: scale(1); opacity: 1; }
+      color: #ff3366;
+      margin-top: 20px;
     }
 
-    #result img {
+    img {
       margin-top: 20px;
-      width: 250px;
-      border-radius: 15px;
-      box-shadow: 0 0 10px rgba(255, 26, 117, 0.7);
-      animation: fadeIn 1s ease forwards;
-      opacity: 0;
+      width: 200px;
+      border-radius: 10px;
     }
-    @keyframes fadeIn {
-      to { opacity: 1; }
+
+    .emoji {
+      position: absolute;
+      top: -2em;
+      font-size: 24px;
+      animation-name: float;
+      animation-timing-function: linear;
+      animation-iteration-count: infinite;
+    }
+
+    @keyframes float {
+      from { transform: translateY(0); }
+      to { transform: translateY(110vh); }
     }
   </style>
 </head>
 <body>
 
-  <h1>Enter Your Name ❤️</h1>
-  <input type="text" id="nameInput" placeholder="Your name" />
+  <h1>Enter Your Name</h1>
+  <input type="text" id="nameInput" placeholder="Type your name here">
   <button onclick="checkName()">Submit</button>
 
   <div id="result"></div>
 
-  <!-- Hidden audio -->
   <audio id="bgMusic" src="song.mp3"></audio>
 
   <script>
@@ -98,15 +88,22 @@
       }
     }
 
+    function removeEmojis() {
+      document.querySelectorAll(".emoji").forEach(el => el.remove());
+    }
+
     function checkName() {
       const gfName = "zeba";
       const inputName = document.getElementById("nameInput").value.trim().toLowerCase();
       const resultDiv = document.getElementById("result");
       const music = document.getElementById("bgMusic");
 
+      // Remove old emojis first
+      removeEmojis();
+
       if (inputName === gfName.toLowerCase()) {
         music.play();
-        createEmojis(); // Only create floating emojis when name matches
+        createEmojis();
         resultDiv.innerHTML = `
           <div class="message">I love you Zeba, Arbaj loves you 💖😘💐🌹💕💘</div>
           <img src="images/zeba.jpg" alt="Zeba" />
@@ -120,6 +117,5 @@
       }
     }
   </script>
-
 </body>
 </html>
